# mlops

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  dvc.yaml  pyproject.toml  requirements.txt  setup.py  test_environment.py
.dvc/: config
data/raw/: test.csv.dvc  train.csv.dvc
docs/: conf.py
notebooks/: titanic-catboost.ipynb
pipeline/: preprocess.py  train_model.py
src/data/: make_dataset.py
src/features/: build_features.py
src/models/: predict_model.py  train_model.py
tests/: foo_test.py
