[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["Artem Ponomarenko <slfdstrctd@yandex.ru>"]
readme = "README.md"

packages = [
    { include = "src" },
    { include = "pipeline" },
]


[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
Sphinx = "^7.3.7"
coverage = "^7.5.3"
python-dotenv = ">=0.5.1"
scikit-learn = "1.3.2"
jupyter = "1.0.0"
ruff = "^0.4.5"
pre-commit = "^3.7.1"
pytest = "^8.2.1"
mypy = "^1.10.0"
pylint = "^3.2.2"
dvc = "3.51.0"
dvc-gdrive = "^3.0.0"
catboost = "^1.2.5"
mlflow = "^2.13.2"
boto3 = "^1.34.123"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
disable = [
    "C0114", # missing-module-docstring
    "C0116", # missing-function-docstring
    "C0115", # missing-class-docstring
    "W1401", # for using regex in the code
    "C0103", # For using data-science naming style (X_train, etc.)
]
